# sol-wager

./: .env.example  .gitignore  API_DOCUMENTATION.md  CODEBASE_DOCUMENTATION.md  General Instructions.md  Key Instructions.md  LICENSE  PRODUCTION_CHECKLIST.md  WHITEPAPER.md  Wagers.Bet WhitePaper.docx  anchor.toml  file-structure.md  general-wager-bet-readme.md  package-lock.json  package.json  readme.md  setup-guide.md  ~$gers.Bet WhitePaper.docx
Migrations/: deploy.ts
app/: .env.example  config-overrides.js  package-lock.json  package.json
app/public/: index.html
app/src/: App.css  App.tsx  index.css  index.tsx
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md
documents/: Wagers.bet-Whitepaper-Styled.html  Wagers.bet-Whitepaper.html
frontend/: .env.example  next.config.js  package.json  tailwind.config.js
programs/general-wager-bet/: Cargo.toml
programs/ipredict-xyz/: Anchor.toml  Cargo.toml
programs/ipredict-xyz/src/: constants.rs  errors.rs  lib.rs
programs/ipredict-xyz/src/instructions/: cancel_order.rs  claim_winnings.rs  create_wager.rs  deposit_and_mint.rs  deposit_and_mint_simple.rs  deposit_sol.rs  initialize_platform.rs  match_orders.rs  mod.rs  place_order.rs  quick_buy.rs  resolve_wager.rs
programs/ipredict-xyz/src/state/: mod.rs  order_book.rs  platform.rs  user_position.rs  wager.rs
scripts/: deploy-frontend.sh  deploy.sh  generate-whitepaper-pdf.sh  generate_whitepaper_pdf.py  init-platform.ts  test-wager.ts
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  (+3 more)
tests/: general-wager-bet.ts
(+29 files in other folders)
