[package]
name = "ipredict-xyz"
version = "0.1.0"
description = "iPredict XYZ - Decentralized Prediction Market Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ipredict_xyz"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.18.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.1", features = ["no-entrypoint"] }
bytemuck = { version = "1.14.0", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1.35.0", features = ["macros"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1